--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "run_dev": "set NODE_ENV=development& next",
     "dev": "next",
     "build": "next build",
     "start": "next start"
@@ -18,10 +19,12 @@
     "gulp-rename": "^2.0.0",
     "gulp-stylus": "^2.7.0",
     "gulp-uglify": "^3.0.2",
+    "jquery": "^3.5.1",
     "next": "^9.4.2",
     "react-accessible-accordion": "^3.0.1",
     "react-dom": "^16.13.1",
     "react-flexbox-grid": "^2.1.2",
+    "react-hook-form": "^5.7.2",
     "react-html-parser": "^2.0.2",
     "save-dev": "0.0.1-security"
   },
