--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "run_dev": "set NODE_ENV=development& next",
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "set NODE_ENV=production next start"
   },
   "keywords": [],
   "author": "Frank Pinedo",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-concat": "^2.6.1",
