--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "main": "index.js",
   "scripts": {
     "run_dev": "set NODE_ENV=development& next",
+    "run_dev2": "set NODE_ENV=development& nodemon app.js",
     "dev": "next",
     "build": "next build",
-    "start": "set NODE_ENV=production next start"
+    "start": "set NODE_ENV=production next start",
+    "server": "set NODE_ENV=production node app.js"
   },
   "keywords": [],
   "author": "Frank Pinedo",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
+    "express": "^4.17.1",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-concat": "^2.6.1",
