--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "next",
     "build": "next build",
     "start": "set NODE_ENV=production next start",
-    "server": "set NODE_ENV=production node app.js"
+    "prod_start": "NODE_ENV=production node server.js",
+    "server": "npm run build && npm run start"
   },
   "keywords": [],
   "author": "Frank Pinedo",
