--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "run_dev2": "set NODE_ENV=development& nodemon app.js",
     "dev": "next",
     "build": "next build",
-    "start": "set NODE_ENV=production next start",
+    "start": "next start",
     "prod_start": "NODE_ENV=production node server.js",
     "server": "npm run build && npm run start"
   },
