--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "run_dev": "set NODE_ENV=development& next",
+    "front_dev": "set NODE_ENV=development& next",
+    "front_pro": "npm run build && pm2 start npm --name 'next' -- start",
     "run_dev2": "set NODE_ENV=development& nodemon app.js",
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "prod_start": "NODE_ENV=production node server.js",
-    "server": "npm run build && pm2 start npm --name 'next' -- start"
+    "prod_start": "NODE_ENV=production node server.js"   
   },
   "keywords": [],
   "author": "Frank Pinedo",
